# XLibs

./: .gitignore  Makefile.am  README.md  configure.ac
config/: pybind11.m4
include/: baseline.h  cdownsample.h  constants.h  dada.h  dadareader.h  databuffer.h  dedisperse.h  dedispersion.h  dedispersionX.h  defaraday.h  downsample.h  equalize.h  filterbank.h  filterbankreader.h  flip.h  hdu.h  heap.h  kepler.h  patch.h  pipeline.h  preprocesslite.h  presto.h  psrdatareader.h  psrfitsreader.h  psrfitswriter.h  rescale.h  rfi.h  stat.h  stat2.h  subdedispersion.h  utils.h
src/: Makefile.am
src/container/: Makefile.am  databuffer.cpp  heap.cpp
src/dada/: Makefile.am  dadareader.cpp
src/formats/: Makefile.am  filterbank.cpp  hdu.cpp  integration.cpp
src/module/: Makefile.am  baseline.cpp  cdownsample.cpp  dedispersion.cpp  dedispersionX.cpp  defaraday.cpp  downsample.cpp  equalize.cpp  filterbankreader.cpp  flip.cpp  kepler.cpp  patch.cpp  pipeline.cpp  preprocesslite.cpp  psrfitsreader.cpp  psrfitswriter.cpp  rescale.cpp  rfi.cpp  stat.cpp  stat2.cpp  subdedispersion.cpp
src/utils/: Makefile.am  utils.cpp
